33. Day 2 - Concurrent LLM Calls: Implementing Asyncio for Parallel Agent Execution

--- a/Section 2 Week 2/2_lab2.ipynb
+++ b/Section 2 Week 2/2_lab2.ipynb
@@ -2,29 +2,168 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-09-02T17:49:00.224857Z",
+     "start_time": "2025-09-02T17:49:00.220852Z"
+    }
    },
-   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "from agents import Agent, Runner, trace, function_tool\n",
-    "from openai.types.responses import ResponseAudioDeltaEvent\n",
+    "from openai.types.responses import ResponseTextDeltaEvent\n",
     "from typing import Dict\n",
     "import sendgrid\n",
+    "import os\n",
     "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
-    "\n"
-   ]
+    "import asyncio"
+   ],
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T17:45:44.403271Z",
+     "start_time": "2025-09-02T17:45:44.391602Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "load_dotenv(override=True)",
+   "id": "6fe0bc894b2283bf",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T17:47:16.371459Z",
+     "start_time": "2025-09-02T17:47:16.366949Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "instructions1 = \"You are a sales agent working for ComplAI, \\\n",
+    "a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. \\\n",
+    "You write professional, serious cold emails.\"\n",
+    "\n",
+    "instructions2 = \"You are a humorous, engaging sales agent working for ComplAI, \\\n",
+    "a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. \\\n",
+    "You write witty, engaging cold emails that are likely to get a response.\"\n",
+    "\n",
+    "instructions3 = \"You are a busy sales agent working for ComplAI, \\\n",
+    "a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. \\\n",
+    "You write concise, to the point cold emails.\""
+   ],
+   "id": "52be1442ac05b6e4",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T17:48:29.957409Z",
+     "start_time": "2025-09-02T17:48:29.952898Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sales_agent1 = Agent(\n",
+    "    name=\"Professional Sales Agent\",\n",
+    "    instructions=instructions1,\n",
+    "    model=\"gpt-4o-mini\"\n",
+    ")\n",
+    "\n",
+    "sales_agent2 = Agent(\n",
+    "    name=\"Engaging Sales Agent\",\n",
+    "    instructions=instructions2,\n",
+    "    model=\"gpt-4o-mini\"\n",
+    ")\n",
+    "\n",
+    "sales_agent3 = Agent(\n",
+    "    name=\"Busy Sales Agent\",\n",
+    "    instructions=instructions3,\n",
+    "    model=\"gpt-4o-mini\"\n",
+    ")"
+   ],
+   "id": "ed9739b6440fd45",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T17:49:14.433632Z",
+     "start_time": "2025-09-02T17:49:03.268731Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "result = Runner.run_streamed(sales_agent1, input=\"Write a cold sales email\")\n",
+    "async for event in result.stream_events():\n",
+    "    if event.type == \"raw_response_event\" and isinstance(event.data, ResponseTextDeltaEvent):\n",
+    "        print(event.data.delta, end=\"\", flush=True)"
+   ],
+   "id": "ff4ea244646bbd74",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject: Simplify Your SOC 2 Compliance with ComplAI\n",
+      "\n",
+      "Dear [Recipient's Name],\n",
+      "\n",
+      "I hope this message finds you well.\n",
+      "\n",
+      "I’m reaching out to introduce you to ComplAI, a cutting-edge SaaS tool designed to streamline SOC 2 compliance and enhance your audit preparation with the power of AI. \n",
+      "\n",
+      "In today’s regulatory landscape, ensuring compliance can be complex and time-consuming. Our platform automates key processes, helping you identify gaps, manage documentation, and stay ahead of audit requirements—all while significantly reducing the burden on your team.\n",
+      "\n",
+      "Key features include:\n",
+      "- Automated readiness assessments\n",
+      "- Real-time compliance tracking\n",
+      "- Customizable reporting capabilities\n",
+      "\n",
+      "Companies like [relevant client or industry example] have experienced improvements in both efficiency and audit outcomes, allowing them to focus on what truly matters—growing their business.\n",
+      "\n",
+      "I’d love to schedule a brief call to discuss how ComplAI can help [Recipient's Company] streamline your compliance processes. Would you be available for a quick chat this week?\n",
+      "\n",
+      "Thank you for your time, and I look forward to the opportunity to connect.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "[Your Name]  \n",
+      "[Your Title]  \n",
+      "ComplAI  \n",
+      "[Your Phone Number]  \n",
+      "[Your Email]  \n",
+      "[Website URL]  "
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "load_dotenv(override=True)",
-   "id": "6fe0bc894b2283bf"
+   "source": "",
+   "id": "368345198f25cd5"
   }
  ],
  "metadata": {
