35. Day 2 - Agent Control Flow: When to Use Handoffs vs. Agents as Tools

--- a/Section 2 Week 2/2_lab2.ipynb
+++ b/Section 2 Week 2/2_lab2.ipynb
@@ -472,12 +472,112 @@
    "execution_count": 16
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:00:52.997005Z",
+     "start_time": "2025-09-02T18:00:52.991013Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tool1 = sales_agent1.as_tool(tool_name=\"sales_agent1\", tool_description=\"Write a cold sales email\")\n",
+    "tool1"
+   ],
+   "id": "21fa3866e5a8a1b5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionTool(name='sales_agent1', description='Write a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'sales_agent1_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBAACD68E0>, strict_json_schema=True, is_enabled=True)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:02:29.987298Z",
+     "start_time": "2025-09-02T18:02:29.979749Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "description = \"Write a cold sales email\"\n",
+    "\n",
+    "tool1 = sales_agent1.as_tool(tool_name=\"sales_agent1\", tool_description=description)\n",
+    "tool2 = sales_agent2.as_tool(tool_name=\"sales_agent2\", tool_description=description)\n",
+    "tool3 = sales_agent3.as_tool(tool_name=\"sales_agent3\", tool_description=description)\n",
+    "\n",
+    "tools = [tool1, tool2, tool3, send_email]\n",
+    "\n",
+    "tools"
+   ],
+   "id": "876c118932159623",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[FunctionTool(name='sales_agent1', description='Write a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'sales_agent1_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBAACD7600>, strict_json_schema=True, is_enabled=True),\n",
+       " FunctionTool(name='sales_agent2', description='Write a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'sales_agent2_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBA5AF4220>, strict_json_schema=True, is_enabled=True),\n",
+       " FunctionTool(name='sales_agent3', description='Write a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'sales_agent3_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBAACD71A0>, strict_json_schema=True, is_enabled=True),\n",
+       " FunctionTool(name='send_email', description='Send out an email with the given body to all sales prospects', params_json_schema={'properties': {'body': {'title': 'Body', 'type': 'string'}}, 'required': ['body'], 'title': 'send_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBA81B6160>, strict_json_schema=True, is_enabled=True)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:03:28.364658Z",
+     "start_time": "2025-09-02T18:02:51.116393Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "instructions = \"\"\"\n",
+    "You are a Sales Manager at ComplAI. Your goal is to find the single best cold sales email using the sales_agent tools.\n",
+    "\n",
+    "Follow these steps carefully:\n",
+    "1. Generate Drafts: Use all three sales_agent tools to generate three different email drafts. Do not proceed until all three drafts are ready.\n",
+    "\n",
+    "2. Evaluate and Select: Review the drafts and choose the single best email using your judgment of which one is most effective.\n",
+    "\n",
+    "3. Use the send_email tool to send the best email (and only the best email) to the user.\n",
+    "\n",
+    "Crucial Rules:\n",
+    "- You must use the sales agent tools to generate the drafts — do not write them yourself.\n",
+    "- You must send ONE email using the send_email tool — never more than one.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "sales_manager = Agent(name=\"Sales Manager\", instructions=instructions, tools=tools, model=\"gpt-4o-mini\")\n",
+    "\n",
+    "message = \"Send a cold sales email addressed to 'Dear CEO'\"\n",
+    "\n",
+    "with trace(\"Sales manager\"):\n",
+    "    result = await Runner.run(sales_manager, message)"
+   ],
+   "id": "9bf95964ef3a4c1e",
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "21fa3866e5a8a1b5"
+   "id": "7960c2a592c3b05f"
   }
  ],
  "metadata": {
