36. Day 2 - From Function Calls to Agent Autonomy: Sales Automation with OpenAI SDK

--- a/Section 2 Week 2/2_lab2.ipynb
+++ b/Section 2 Week 2/2_lab2.ipynb
@@ -572,12 +572,197 @@
    "execution_count": 19
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:07:50.747711Z",
+     "start_time": "2025-09-02T18:07:50.740201Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "subject_instructions = \"You can write a subject for a cold sales email. \\\n",
+    "You are given a message and you need to write a subject for an email that is likely to get a response.\"\n",
+    "\n",
+    "html_instructions = \"You can convert a text email body to an HTML email body. \\\n",
+    "You are given a text email body which might have some markdown \\\n",
+    "and you need to convert it to an HTML email body with simple, clear, compelling layout and design.\"\n",
+    "\n",
+    "subject_writer = Agent(name=\"Email subject writer\", instructions=subject_instructions, model=\"gpt-4o-mini\")\n",
+    "subject_tool = subject_writer.as_tool(tool_name=\"subject_writer\", tool_description=\"Write a subject for a cold sales email\")\n",
+    "\n",
+    "html_converter = Agent(name=\"HTML email body converter\", instructions=html_instructions, model=\"gpt-4o-mini\")\n",
+    "html_tool = html_converter.as_tool(tool_name=\"html_converter\",tool_description=\"Convert a text email body to an HTML email body\")"
+   ],
+   "id": "7960c2a592c3b05f",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:09:45.215267Z",
+     "start_time": "2025-09-02T18:09:45.209226Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "@function_tool\n",
+    "def send_html_email(subject: str, html_body: str) -> Dict[str, str]:\n",
+    "    \"\"\" Send out an email with the given subject and HTML body to all sales prospects \"\"\"\n",
+    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
+    "    from_email = Email(\"ed@edwarddonner.com\")  # Change to your verified sender\n",
+    "    to_email = To(\"ed.donner@gmail.com\")  # Change to your recipient\n",
+    "    content = Content(\"text/html\", html_body)\n",
+    "    mail = Mail(from_email, to_email, subject, content).get()\n",
+    "    sg.client.mail.send.post(request_body=mail)\n",
+    "    return {\"status\": \"success\"}"
+   ],
+   "id": "61f360dd22762821",
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:09:50.913444Z",
+     "start_time": "2025-09-02T18:09:50.910250Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tools = [subject_tool, html_tool, send_html_email]",
+   "id": "f0bd96dcf4d14ed4",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:09:51.658599Z",
+     "start_time": "2025-09-02T18:09:51.654048Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tools",
+   "id": "eb66b934677e1a23",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[FunctionTool(name='subject_writer', description='Write a subject for a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'subject_writer_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBAAE59120>, strict_json_schema=True, is_enabled=True),\n",
+       " FunctionTool(name='html_converter', description='Convert a text email body to an HTML email body', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'html_converter_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBA815C180>, strict_json_schema=True, is_enabled=True),\n",
+       " FunctionTool(name='send_html_email', description='Send out an email with the given subject and HTML body to all sales prospects', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_html_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBA81B6520>, strict_json_schema=True, is_enabled=True)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:10:01.309300Z",
+     "start_time": "2025-09-02T18:10:01.304672Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "instructions =\"You are an email formatter and sender. You receive the body of an email to be sent. \\\n",
+    "You first use the subject_writer tool to write a subject for the email, then use the html_converter tool to convert the body to HTML. \\\n",
+    "Finally, you use the send_html_email tool to send the email with the subject and HTML body.\"\n",
+    "\n",
+    "\n",
+    "emailer_agent = Agent(\n",
+    "    name=\"Email Manager\",\n",
+    "    instructions=instructions,\n",
+    "    tools=tools,\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    handoff_description=\"Convert an email to HTML and send it\")"
+   ],
+   "id": "2b111c05badc2c7b",
+   "outputs": [],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T18:10:53.366854Z",
+     "start_time": "2025-09-02T18:10:53.361348Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tools = [tool1, tool2, tool3]\n",
+    "handoffs = [emailer_agent]\n",
+    "print(tools)\n",
+    "print(handoffs)"
+   ],
+   "id": "7ad51236b8378a76",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[FunctionTool(name='sales_agent1', description='Write a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'sales_agent1_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBAACD7600>, strict_json_schema=True, is_enabled=True), FunctionTool(name='sales_agent2', description='Write a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'sales_agent2_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBA5AF4220>, strict_json_schema=True, is_enabled=True), FunctionTool(name='sales_agent3', description='Write a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'sales_agent3_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBAACD71A0>, strict_json_schema=True, is_enabled=True)]\n",
+      "[Agent(name='Email Manager', handoff_description='Convert an email to HTML and send it', tools=[FunctionTool(name='subject_writer', description='Write a subject for a cold sales email', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'subject_writer_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBAAE59120>, strict_json_schema=True, is_enabled=True), FunctionTool(name='html_converter', description='Convert a text email body to an HTML email body', params_json_schema={'properties': {'input': {'title': 'Input', 'type': 'string'}}, 'required': ['input'], 'title': 'html_converter_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBA815C180>, strict_json_schema=True, is_enabled=True), FunctionTool(name='send_html_email', description='Send out an email with the given subject and HTML body to all sales prospects', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_html_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000001BBA81B6520>, strict_json_schema=True, is_enabled=True)], mcp_servers=[], mcp_config={}, instructions='You are an email formatter and sender. You receive the body of an email to be sent. You first use the subject_writer tool to write a subject for the email, then use the html_converter tool to convert the body to HTML. Finally, you use the send_html_email tool to send the email with the subject and HTML body.', prompt=None, handoffs=[], model='gpt-4o-mini', model_settings=ModelSettings(temperature=None, top_p=None, frequency_penalty=None, presence_penalty=None, tool_choice=None, parallel_tool_calls=None, truncation=None, max_tokens=None, reasoning=None, verbosity=None, metadata=None, store=None, include_usage=None, response_include=None, top_logprobs=None, extra_query=None, extra_body=None, extra_headers=None, extra_args=None), input_guardrails=[], output_guardrails=[], output_type=None, hooks=None, tool_use_behavior='run_llm_again', reset_tool_choice=True)]\n"
+     ]
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-09-02T18:11:09.043837Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sales_manager_instructions = \"\"\"\n",
+    "You are a Sales Manager at ComplAI. Your goal is to find the single best cold sales email using the sales_agent tools.\n",
+    "\n",
+    "Follow these steps carefully:\n",
+    "1. Generate Drafts: Use all three sales_agent tools to generate three different email drafts. Do not proceed until all three drafts are ready.\n",
+    "\n",
+    "2. Evaluate and Select: Review the drafts and choose the single best email using your judgment of which one is most effective.\n",
+    "You can use the tools multiple times if you're not satisfied with the results from the first try.\n",
+    "\n",
+    "3. Handoff for Sending: Pass ONLY the winning email draft to the 'Email Manager' agent. The Email Manager will take care of formatting and sending.\n",
+    "\n",
+    "Crucial Rules:\n",
+    "- You must use the sales agent tools to generate the drafts — do not write them yourself.\n",
+    "- You must hand off exactly ONE email to the Email Manager — never more than one.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "sales_manager = Agent(\n",
+    "    name=\"Sales Manager\",\n",
+    "    instructions=sales_manager_instructions,\n",
+    "    tools=tools,\n",
+    "    handoffs=handoffs,\n",
+    "    model=\"gpt-4o-mini\")\n",
+    "\n",
+    "message = \"Send out a cold sales email addressed to Dear CEO from Alice\"\n",
+    "\n",
+    "with trace(\"Automated SDR\"):\n",
+    "    result = await Runner.run(sales_manager, message)"
+   ],
+   "id": "2aa4108ba46e2458",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "7960c2a592c3b05f"
+   "id": "9ddef332ca276043"
   }
  ],
  "metadata": {
