Day 2 - Introduce Sales Automation Workflow: Add collaborative agents for drafting, selecting, and sending SOC 2 cold sales emails via SendGrid integration. Includes modular tools like subject generation, HTML conversion, and manager-level selection logic.

--- a/Section 2 Week 2/2_lab2.ipynb
+++ b/Section 2 Week 2/2_lab2.ipynb
@@ -714,10 +714,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-09-02T18:12:06.565179Z",
      "start_time": "2025-09-02T18:11:09.043837Z"
     }
    },
@@ -754,7 +752,7 @@
    ],
    "id": "2aa4108ba46e2458",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 26
   },
   {
    "metadata": {},
