--- a/Section 2 Week 2/3_lab3.ipynb
+++ b/Section 2 Week 2/3_lab3.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    }
    },
-   "outputs": [],
    "source": [
     ""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "2267d667904813f9"
   }
  ],
  "metadata": {
